v 0.9.5.2 (10 sep)

Fixed tooltips for religion tab
Fixed tooltip position for smaller resolutions

Robotics

Enriched Uranium
Oil Refinery
Steel Plants

v 0.9.4.1 (7 sep)

New tooltips for science tab (with ETA)

v 0.9.4.0 (4 sep)

Bonfire is now replaced with V2 (Old bonfire still accessible, but hidden)

> gamePage.bonfireTab.visible = true;

Added ETA in the building tooltips
Fixed iron incorrectly getting double bonus from sw/magneto
Fixed Smelter/Calciner having higher SW bonus compared to other resources

v 0.9.3.9 (2 sep)

Uranium consumption will no longer scale with reactors and magnetos (sic)
Village job buttons will display more accurate tooltips
"Clear jobs" button will finally display confirmation message
Player will be able to open Village tab even if there are no houses (thanks Duke for fixing it)

v 0.9.3.8 (14 aug)

Slightly nerfed steamworks/magneto synergy
Magnetos will no longer provide a bonus to the oil production
Fixed HoD
Fixed Reactors not consuming uranium correctly
Reactors will now benefit Smelters and Caliceners in the same way as magnetos
Fixed export issue on IE11

v 0.9.3.7 (14 aug)

Augumentations
'IW' buildings filter for V2 (only in IW mode whith library puchased)

Steamworks and Magnetos will now correctly boost Smelters and Calciners (iron, gold, coal and titanium output)
Paragons will now boost Smelters and Calciners (with 75% penalty)

Msg fix by xranti <3

v 0.9.2.7 (13 aug)

Reduced titanium price of reactors and factories in favour of plates
Alloy will now require iron to craft
Added 'togglable' buildings filter
V2 tooltip will now stick to bottom

v 0.9.2.6 (12 aug)

Fixed reset not clearing dead kittens counter
Added two more filter tabs for V2 (all/enabled)

v 0.9.2.5 (11 aug)

Log size fix
Added work in progress building tab with redesigned UI
Trade tab will keep panel states (collapsed/opened)

v 0.9.1.4 (8 aug)
Added a couple of village names
Removed caps on solar rev and apocrypha, nerfed apocyrypha effect
