@@ -11,19 +11,19 @@
 		
 		<script src="http://ajax.googleapis.com/ajax/libs/dojo/1.7.0/dojo/dojo.js"></script>
 		
-		<script src="./core.js?v=0.9.5.2" type="text/javascript"></script>
-		<script src="./resources.js?v=0.9.5.2" type="text/javascript"></script>
-		<script src="./calendar.js?v=0.9.5.2" type="text/javascript"></script>
-		<script src="./buildings.js?v=0.9.5.2" type="text/javascript"></script>
-		<script src="./village.js?v=0.9.5.2" type="text/javascript"></script>
-		<script src="./science.js?v=0.9.5.2" type="text/javascript"></script>
-		<script src="./workshop.js?v=0.9.5.2" type="text/javascript"></script>
-		<script src="./diplomacy.js?v=0.9.5.2" type="text/javascript"></script>
-		<script src="./economy.js?v=0.9.5.2" type="text/javascript"></script>
-		<script src="./religion.js?v=0.9.5.2" type="text/javascript"></script>
-		<script src="./achievements.js?v=0.9.5.2" type="text/javascript"></script>
+		<script src="./core.js?v=0.9.5.3" type="text/javascript"></script>
+		<script src="./resources.js?v=0.9.5.3" type="text/javascript"></script>
+		<script src="./calendar.js?v=0.9.5.3" type="text/javascript"></script>
+		<script src="./buildings.js?v=0.9.5.3" type="text/javascript"></script>
+		<script src="./village.js?v=0.9.5.3" type="text/javascript"></script>
+		<script src="./science.js?v=0.9.5.3" type="text/javascript"></script>
+		<script src="./workshop.js?v=0.9.5.3" type="text/javascript"></script>
+		<script src="./diplomacy.js?v=0.9.5.3" type="text/javascript"></script>
+		<script src="./economy.js?v=0.9.5.3" type="text/javascript"></script>
+		<script src="./religion.js?v=0.9.5.3" type="text/javascript"></script>
+		<script src="./achievements.js?v=0.9.5.3" type="text/javascript"></script>
 		
-		<script src="./game.js?v=0.9.5.2" type="text/javascript"></script>
+		<script src="./game.js?v=0.9.5.3" type="text/javascript"></script>
 		
 		<script>
 		  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -394,7 +394,7 @@
 					<a href="#" onclick="dev();" >#</a> |
 					<a href="#" onclick="wipe();" >Wipe</a> |
 					
-					<a href="#" onclick="$('#changelogDiv').toggle();">Ver 0.9.5.2</a>
+					<a href="#" onclick="$('#changelogDiv').toggle();">Ver 0.9.5.3</a>
 
 				</div>
 			</div>
@@ -413,8 +413,9 @@
 						Oil Refinery
 						Steel Plants
 						
-					Rev: 2
+					Rev: 3
 						Religion tooltips
+						Gather/Refine fixes
 						
 				</pre>
 				<a href="changelog.txt" target="_blank" style="position:relative; top:-15px;">full changelog</a>
